feat(orders): adiciona valor e relatório de vendas em PDF
